# system-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LANGUAGE_SELECTOR.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adaptive_refresh.rs  app.rs  errors.rs  frame_monitor.rs  gpu_monitor.rs  lib.rs  main.rs  models.rs  monitor.rs  retry.rs  store_commands.rs  system_commands.rs  tray.rs  window.rs
src/assets/: main.css
src/composables/: useSystemMonitor.ts
src/router/: index.ts
src/stores/: index.ts  settings.ts  system.ts
src/views/: Settings.vue  SystemMonitor.vue
