[package]
name = "system_monitor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "system_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 使用最新版本
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 升级到sysinfo最新版本
sysinfo = "0.33"
tokio = { version = "1.42", features = ["full"] }
# 添加更多现代依赖
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# GPU 监控依赖
nvml-wrapper = "0.10"
thiserror = "1.0"

